<resources>
    <string name="app_name">MySubmission</string>
    <string name="tab_title_1">Movies</string>
    <string name="tab_title_2">Tv Shows</string>
    <string name="title_3">Favorite</string>
    <string name="menu_1">English</string>
    <string name="menu_2">Indonesia</string>
    <string name="choose_lang">Choose language</string>
    <string name="app_title">MyMov</string>
    <string name="movie_title">Spider-Man: Into the Spider-Verse</string>
    <string name="movie_rating">7.7 / 10</string>
    <string name="movie_time">100 minutes</string>
    <string name="detail_page">Detail Page</string>
    <string name="movie_desc">Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson \"Kingpin\" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</string>
    <string name="release_date">Release date</string>
    <string name="movie_release">December 14, 2018</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="movie_genre">Animation, action, adventure</string>
    <string name="directors">Directors</string>
    <string name="creators">Creators</string>
    <string name="movie_directors">Bob Persichetti, Peter Ramsey, Rodney Rothman</string>
    <string name="writers">Writers</string>
    <string name="starring">Starring</string>
    <string name="movie_writers">Phil Lord, Rodney Rothman</string>
    <string name="studio">Studio</string>
    <string name="tv_network">TV Network</string>
    <string name="movie_studio">Sony Pictures</string>
    <string name="rating">Rating</string>
    <string name="poster_film">Movie poster</string>
    <string-array name="data_title_movies">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Venom</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Deadpool 2</item>
        <item>How to Train Your Dragon: The Hidden World </item>
        <item>Spider-Man: Into the Spider-Verse</item>
    </string-array>
    <string-array name="data_desc_movies">
        <item>A musician helps a young singer find fame as age and alcoholism send his own career into a downward spiral.</item>
        <item>Arthur Curry, the human-born heir to the underwater kingdom of Atlantis, goes on a quest to prevent a war between the worlds of ocean and land.</item>
        <item>The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.</item>
        <item>A failed reporter is bonded to an alien entity, one of many symbiotes who have invaded Earth. But the being takes a liking to Earth and decides to protect it.</item>
        <item>The story of the legendary British rock band Queen and lead singer Freddie Mercury, leading up to their famous performance at Live Aid (1985).</item>
        <item> On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small California beach town. On the cusp of turning 18 and trying to find her place in the world, Charlie Watson discovers Bumblebee, battle-scarred and broken.</item>
        <item>Under the tutelage of Rocky Balboa, newly crowned heavyweight champion Adonis Creed faces off against Viktor Drago, the son of Ivan Drago.</item>
        <item>Foul-mouthed mutant mercenary Wade Wilson (a.k.a. Deadpool), brings together a team of fellow mutant rogues to protect a young boy with supernatural abilities from the brutal, time-traveling cyborg Cable.</item>
        <item>When Hiccup discovers Toothless isn\'t the only Night Fury, he must seek "The Hidden World", a secret Dragon Utopia before a hired tyrant named Grimmel finds it first.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
    </string-array>
    <string-array name="data_rating_movies">
        <item>7.7</item>
        <item>7.0</item>
        <item>8.5</item>
        <item>6.7</item>
        <item>8.0</item>
        <item>6.8</item>
        <item>7.2</item>
        <item>7.7</item>
        <item>7.5</item>
        <item>8.4</item>
    </string-array>
    <string-array name="data_release_movies">
        <item>October 5, 2018</item>
        <item>December 21, 2018</item>
        <item>April 27, 2018</item>
        <item>October 5, 2018</item>
        <item>November 2, 2018</item>
        <item>December 21, 2018</item>
        <item>November 21, 2018 </item>
        <item>May 18, 2018</item>
        <item>February 22, 2019</item>
        <item>December 14, 2018</item>
    </string-array>
    <string-array name="data_runtime_movies">
        <item>135 minutes</item>
        <item>143 minutes</item>
        <item>156 minutes</item>
        <item>112 minutes</item>
        <item>134 minutes</item>
        <item>119 minutes</item>
        <item>130 minutes</item>
        <item>119 minutes</item>
        <item>110 minutes</item>
        <item>100 minutes</item>
    </string-array>
    <string-array name="data_genre_movies">
        <item>Drama</item>
        <item>Action &amp; Adventure</item>
        <item>Action &amp; Adventure</item>
        <item>Action &amp; Adventure, Drama</item>
        <item>Drama</item>
        <item>Action &amp; Adventure</item>
        <item>Action &amp; Adventure, Drama</item>
        <item>Action &amp; Adventure, Comedy</item>
        <item>Action &amp; Adventure, Animation</item>
        <item>Animation, action, adventure</item>
    </string-array>
    <string-array name="data_directors_movies">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Anthony Russo, Joe Russo</item>
        <item>Ruben Fleischer</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr.</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Phil Lord, Rodney Rothman</item>
    </string-array>
    <string-array name="data_writers_movies">
        <item>Will Fetters, Eric Roth, Bradley Cooper</item>
        <item>Will Beall, David Leslie Johnson-McGoldrick</item>
        <item>Christopher Markus, Stephen McFeely</item>
        <item>Scott Rosenberg, Jeff Pinkner, Kelly Marcel</item>
        <item>Anthony McCarten</item>
        <item>Christina Hodson</item>
        <item>Sascha Penn, Cheo Hodari Coker, Juel Taylor, Sylvester Stallone</item>
        <item>Rhett Reese, Paul Wernick, Ryan Reynolds</item>
        <item>Dean DeBlois</item>
        <item>Phil Lord, Rodney Rothman</item>
    </string-array>
    <string-array name="data_studio_movies">
        <item>Warner Bros. Pictures</item>
        <item>Warner Bros. Pictures</item>
        <item>Walt Disney Pictures</item>
        <item>Columbia Pictures</item>
        <item>20th Century Fox</item>
        <item>Paramount Pictures</item>
        <item>MGM</item>
        <item>20th Century Fox</item>
        <item>Universal Pictures</item>
        <item>Sony Pictures</item>
    </string-array>
    <string-array name="data_title_tvshow">
        <item>Arrow</item>
        <item>Dragon Ball</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Grey\'s Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="data_desc_tvshow">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>Son Gokû, a fighter with a monkey tail, goes on a quest with an assortment of odd characters in search of the Dragon Balls, a set of crystals that can give its bearer anything they desire.</item>
        <item>In a wacky Rhode Island town, a dysfunctional family strive to cope with everyday life as they are thrown from one crazy scenario to another.</item>
        <item>After being struck by lightning, Barry Allen wakes up from his coma to discover he\'s been given the power of super speed, becoming the Flash, fighting crime in Central City.</item>
        <item>Nine noble families fight for control over the mythical lands of Westeros, while an ancient enemy returns after being dormant for thousands of years.</item>
        <item>The story behind Detective James Gordon\'s rise to prominence in Gotham City in the years before Batman\'s arrival.</item>
        <item>A drama centered on the personal and professional lives of five surgical interns and their supervisors</item>
        <item>In equal parts high-concept thriller and coming-of-age drama, HANNA follows the journey of an extraordinary young girl raised in the forest, as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is.</item>
        <item>A young man is bestowed with incredible martial arts skills and a mystical force known as the Iron Fist.</item>
        <item>Sheriff Deputy Rick Grimes wakes up from a coma to learn the world is in ruins, and must lead a group of survivors to stay alive</item>
    </string-array>
    <string-array name="data_rating_tvshow">
        <item>7.6</item>
        <item>8.5</item>
        <item>8.1</item>
        <item>7.8</item>
        <item>9.3</item>
        <item>7.8</item>
        <item>7.6</item>
        <item>7.5</item>
        <item>6.5</item>
        <item>8.2</item>
    </string-array>
    <string-array name="data_release_tvshow">
        <item>October 10, 2012</item>
        <item>February 26, 1986</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>April 17, 2011</item>
        <item>September 22, 2014</item>
        <item>March 27, 2005</item>
        <item>February 3, 2019</item>
        <item>March 17, 2017</item>
        <item>October 31, 2010</item>
    </string-array>
    <string-array name="data_runtime_tvshow">
        <item>42 minutes</item>
        <item>25 minutes</item>
        <item>22 minutes</item>
        <item>43 minutes</item>
        <item>57 minutes</item>
        <item>42 minutes</item>
        <item>41 minutes</item>
        <item>60 minutes</item>
        <item>55 minutes</item>
        <item>44 minutes</item>
    </string-array>
    <string-array name="data_genre_tvshow">
        <item>Crime, Drama, Mystery</item>
        <item>Animation, Action, Adventure</item>
        <item>Animation, Comedy</item>
        <item>Action, Adventure, Drama</item>
        <item>Action, Adventure, Drama</item>
        <item>Action, Crime, Drama </item>
        <item>Drama, Romance</item>
        <item>Action, Drama</item>
        <item>Action, Adventure, Crime</item>
        <item>Drama, Horror, Thriller</item>
    </string-array>
    <string-array name="data_creators_tvshow">
        <item>Greg Berlanti, Andrew Kreisberg, Marc Guggenheim</item>
        <item>Akira Toriyama</item>
        <item>Seth MacFarlane, David Zuckerman</item>
        <item>Greg Berlanti, Geoff Johns, Andrew Kreisberg</item>
        <item>David Benioff, D.B. Weiss</item>
        <item>Bruno Heller</item>
        <item>Shonda Rhimes</item>
        <item>David Farr</item>
        <item>Scott Buck</item>
        <item>Frank Darabont, Angela Kang</item>
    </string-array>
</resources>