<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movies">

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.dicoding.picodiploma.mysubmission.view.fragment.MoviesFragment"
        android:label="@string/tab_title_1"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/nav_tvshow"
        android:name="com.dicoding.picodiploma.mysubmission.view.fragment.TvShowFragment"
        android:label="@string/tab_title_2"
        tools:layout="@layout/fragment_tv_show" />
    <fragment
        android:id="@+id/nav_fav"
        android:name="com.dicoding.picodiploma.mysubmission.view.fragment.FavoriteFragment"
        android:label="@string/title_3"
        tools:layout="@layout/fragment_favorite" />
</navigation>