<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="22dp"
        android:padding="16dp"
        android:background="@drawable/shape_item"
        android:elevation="1dp">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/poster_film" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="12dp"
                android:text="@string/movie_title"
                android:fontFamily="@font/msemibold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:maxLines="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/rating_icon" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_rating"
                    android:textSize="16sp"
                    android:fontFamily="@font/mmedium"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/time_icon" />

                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_time"
                    android:textSize="16sp"
                    android:fontFamily="@font/mmedium"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>